# wasm-rs

./: Cargo.toml  Dockerfile  README.md  justfile
hello-browser/: Cargo.toml
hello-k8s/: Cargo.toml  README.md
hello-k8s/src/: main.rs
src/: main.rs
