[package]
name = "wasm-rs"
version = "0.1.0"
authors = ["mk10969 <mk10969@gmail.com>"]
edition = "2018"
description = '''
sample WebAssembly.
'''
license = "xxx"
repository = ""


[dependencies]
wasm-bindgen = "0.2.76"


[lib]
crate-type = ["cdylib"]


[package.metadata.wasm-pack.profile.release]
wasm-opt = false
